--- a/src/templates/tags/tag_detail.html
+++ b/src/templates/tags/tag_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load get_thumbnail %}
 
 {% block content %}
 
@@ -14,7 +15,8 @@
 {#                {{ product_instance.thumbnail_set.all.first }} <br>#}
 {#                {{ product_instance.thumbnail_set.all.first.media }} <br>#}
                 <a href="{{ product_instance.get_absoulte_url }}">
-                    <img src="{{ product_instance.thumbnail_set.all.first.media.url }}" alt="">
+{#                    <img src="{{ product_instance.thumbnail_set.all.first.media.url }}" alt="">#}
+                    <img src='{{ product_instance | get_thumbnail:"hd" }}' alt="">
                 </a>
 
 
